Fix overflow on chart hovers

--- a/src/views/Dashboard/treasury-dashboard.scss
+++ b/src/views/Dashboard/treasury-dashboard.scss
@@ -83,7 +83,8 @@
     }
   }
   .data-grid {
-    overflow: hidden;
+    position: relative;
+    z-index: 5;
   }
 }
 
